--- a/src/assets/scss/_components/header.scss
+++ b/src/assets/scss/_components/header.scss
@@ -2,6 +2,9 @@
   padding: 50px 0 20px;
   display: flex;
   justify-content: space-between;
+  @media (max-width: 768px) {
+    padding: 20px 0 20px;
+  }
   &__nav {
 
   }
@@ -35,5 +38,79 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 15;
-  left: 150px;
+  left: 0;
+  right: 0;
+  &__container {
+    max-width: 80%;
+    padding: 0 20px;
+    margin: 0 auto;
+    @media (max-width: 1200px) {
+      max-width: 100%;
+      padding: 0 40px;
+    }
+  }
+  &__box {
+    max-width: 420px;
+    text-align: center;
+    @media (max-width: 1200px) {
+      //max-width: 100%;
+    }
+  }
+  &__h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 98px;
+    font-weight: 200;
+    color: #ffffff;
+    line-height: 1.1;
+    @media (max-width: 1200px) {
+      font-size: 75px;
+    }
+    @media (max-width: 768px) {
+      font-size: 40px;
+    }
+    & b {
+      font-weight: 700;
+    }
+  }
+  &__h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    line-height: 1.1;
+    font-size: 34px;
+    letter-spacing: 10px;
+    @media (max-width: 1200px) {
+      font-size: 21px;
+    }
+    @media (max-width: 768px) {
+      font-size: 16px;
+    }
+  }
+  &__pipe {
+    color: #00ccff;
+  }
+  &__subtitle {
+    font-size: 14px;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-bottom: 45px;
+    @media (max-width: 1200px) {
+      margin-bottom: 25px;
+    }
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+    }
+  }
+  &__count-down {
+    font-family: "digital7", serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 0.9px;
+    color: #ffffff;
+    text-align: left;
+    @media (max-width: 1200px) {
+      text-align: center;
+    }
+  }
 }
