--- a/src/assets/scss/_components/page.scss
+++ b/src/assets/scss/_components/page.scss
@@ -3,25 +3,72 @@
   &__hero {
     position: relative;
     padding-bottom: 51%;
+    @media (max-width: 768px) {
+      padding-bottom: 60%;
+    }
+    @media (max-width: 480px) {
+      padding-bottom: 70%;
+    }
   }
   &__header {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 20;
   }
   &__about {
-    padding: 150px 0 0 0;
+    padding: 140px 0 20px 0;
+    @media (max-width: 980px) {
+      padding: 100px 0 20px 0;
+    }
   }
+
   &__container {
     max-width: 1160px;
     padding: 0 15px;
     margin: 0 auto;
     &--lg {
-      max-width: 100%;
-      padding: 0 40px;
+      max-width: 80%;
+      padding: 0 20px;
     }
   }
 
+  &__description {
+    padding: 50px 0 50px 0;
+  }
+
+  &__security {
+
+  }
+
+  &__community {
+    padding: 80px 0 95px;
+    background-image: url(../img/community-bg.jpg);
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &__token {
+    padding: 105px 0 30px;
+  }
+
+  &__development {
+    padding: 65px 0 130px;
+    background-color: #f2f2f2;
+  }
+
+  &__spec {
+    padding: 150px 0 70px;
+  }
+
+  &__team {
+    padding: 40px 0;
+  }
+
+  &__footer {
+    padding: 65px 0 0;
+    background-color: #f2f2f2;
+  }
 
 }
