--- a/src/assets/scss/_settings/typography.scss
+++ b/src/assets/scss/_settings/typography.scss
@@ -8,3 +8,15 @@ $base-line-height:  1.5;
 
 $primary-font-color: $primary-color;
 $secondary-font-color: $secondary-color;
+
+
+@font-face {
+  font-family: 'digital7';
+  src: url('../fonts/digital7.eot');
+  src: url('../fonts/digital7.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/digital7.woff') format('woff'),
+  url('../fonts/digital7.ttf') format('truetype'),
+  url('../fonts/digital7.svg#Sri-TSCRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
