--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,7 +7,7 @@
     <title>WizeBox  Cyber shield  </title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
-    <!--<link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600,700" rel="stylesheet">
   </head>
   <body>
 
