--- a/src/assets/scss/_components/page.scss
+++ b/src/assets/scss/_components/page.scss
@@ -27,6 +27,8 @@
     max-width: 1160px;
     padding: 0 15px;
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
     &--lg {
       max-width: 80%;
       padding: 0 20px;
@@ -60,6 +62,8 @@
 
   &__spec {
     padding: 150px 0 70px;
+    position: relative;
+    z-index: 1;
   }
 
   &__team {
@@ -71,4 +75,12 @@
     background-color: #f2f2f2;
   }
 
+}
+
+.particles-js-canvas-el {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
